--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@sentry/node": "^7.31.0",
     "@sentry/tracing": "^7.31.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
